--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
+SITE_NAME_HEADER=Digital Garden
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { --mcl-card-header-border-width: 2.5px; --mcl-card-border-width: 0px; --mcl-card-gap: 0.5em; --bold-modifier: 200; --link-unresolved-opacity: 0.7; --image-grid-fit: contain; --callout-blend-mode: var(--highlight-mix-blend-mode); --image-muted: 0.7; --image-radius: 4px; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { --ui1: #FF9B00; --mcl-card-border-color: hsl(182.12,100%,50%); --link-unresolved-color: #FF0000; --link-unresolved-decoration-color: #FF0000; }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-windows is-frameless is-hidden-frameless obsidian-app show-ribbon show-view-header css-settings-manager minimal-theme minimal-solarized-light minimal-dracula-dark minimal-line-nums minimal-readable-off minimal-light minimal-dark colorful-headings colorful-frame colorful-active links-ext-on chart-default-width table-default-width img-default-width iframe-default-width map-default-width callouts-default zoom-off checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off vault-profile-default ribbon-hidden maximize-tables-off row-hover tabs-default tab-stack-top minimal-tab-title-hover default is-maximized is-focused
+USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=false
